[project]
name = "h3tiler"
description = "A simple API for tiling H3 hexagons."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Biel Stela", email = "biel.stela@vizzuality.com" }]
license = { text = "MIT" }
keywords = ["h3", "GIS", "Fastapi", "Tiler"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]

dependencies = [
    "fastapi>=0.100.0",
    "h3ronpy>=0.17",
    "pydantic>=2.0.0",
    "shapely>=2.0.1",
    "mercantile>=1.2.1",
    "psycopg>=3",
]

version = "0.1.0"

[tool.black]
line-length = 100

[tool.isort]
profile = "black"

[tool.ruff]
select = [
    "D1",   # pydocstyle errors
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # flake8
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501"  # line too long, handled by black
]
