[project]
name = "h3tiler"
description = "A simple API for tiling H3 hexagons."
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Biel Stela", email = "biel.stela@vizzuality.com" }]
license = { text = "MIT" }
keywords = ["h3", "GIS", "Fastapi", "Tiler"]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: GIS",
]

version = "0.1.0"

[tool.ruff]

line-length = 100
select = [
    "D1",   # pydocstyle errors
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # flake8
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
    "I",    # isort
]
ignore = [
    "E501"  # line too long, handled by black
]
